tests/negative/typecheck/type_alias.orng
// type_alias.orng:5:19: error: unexpected type
// const My_Int = Int
//                  ^
// 
const My_Int = Int

fn main() -> My_Int {
    239
}